click mo detail

--- a/app/src/main/res/layout/activity_acount.xml
+++ b/app/src/main/res/layout/activity_acount.xml
@@ -302,7 +302,7 @@
             android:layout_height="wrap_content"
             android:text="Acount"
             android:textSize="12dp"
-            android:drawableTop="@drawable/ic_persion"/>
+            android:drawableTop="@drawable/ic_person"/>
     </FrameLayout>
 
 </FrameLayout>
