--- a/app/src/main/res/layout/custom_recycler_noi_bat.xml
+++ b/app/src/main/res/layout/custom_recycler_noi_bat.xml
@@ -17,6 +17,7 @@
         android:orientation="vertical"
         >
         <ImageView
+            android:id="@+id/imvBackground"
             android:layout_width="match_parent"
             android:layout_height="185dp"
             android:scaleType="centerCrop"
@@ -39,6 +40,7 @@
             android:layout_margin="8dp"
             >
             <TextView
+                android:id="@+id/tvPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="đ350.000"
