--- a/app/src/main/res/menu/homemenu.xml
+++ b/app/src/main/res/menu/homemenu.xml
@@ -5,12 +5,12 @@
         android:id="@+id/itCart"
         android:title="Cart"
         android:icon="@drawable/ic_cart"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         app:actionLayout="@layout/custom_item_cart"/>
     <item
         android:id="@+id/itChat"
         android:title="Chat"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_chat"
         app:actionLayout="@layout/custom_item_chat"/>
 </menu>
