--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,15 @@
     <color name="blue3">#A0E9FF</color>
     <color name="blue4">#CDF5FD</color>
     <color name="blue5">#E3F9FD</color>
-    <color name="green1">#76BA99</color>    
+    <color name="green1">#76BA99</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="primary_color">#ededed</color>
+    <color name="blue_0074D9">#0074D9</color>
+    <color name="gray_737373">#737373</color>
+    <color name="blue_357EF6">#357EF6</color>
+    <color name="red_FF0000">#FF0000</color>
 </resources>
