add UI into app

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Base application theme. -->
     <style name="Base.Theme.DATN_MD09" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
@@ -10,5 +10,11 @@
     <style name="Theme.DATN_MD09" parent="Base.Theme.DATN_MD09" />
     <style name="ToolbarTheme" parent="@style/ThemeOverlay.AppCompat.ActionBar">
         <item name="colorControlNormal">@color/blue1</item>
+    </style>
+
+    <style name="CircleShape" parent="Widget.MaterialComponents.ShapeableImageView">
+        <app:shapeAppearance>
+            <cornerRadius topLeft="50%" topRight="50%" bottomRight="50%" bottomLeft="50%"/>
+        </app:shapeAppearance>
     </style>
 </resources>
